packages/pyg4ometry/pyg4ometry-1.4.2-cp39-cp39-win_amd64.whl/pyg4ometry/gdml/GdmlExpression/GdmlExpressionParser.py
# Generated from GdmlExpression.g4 by ANTLR 4.13.1
from antlr4 import *
from io import StringIO
import sys
from typing import Optional

from typing import TextIO



class GdmlExpressionParser(Parser):
    grammarFileName = "GdmlExpression.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'cos'",
        "'sin'",
        "'tan'",
        "'acos'",
        "'asin'",
        "'atan'",
        "'log'",
        "'log10'",
        "'sqrt'",
        "'exp'",
        "'pow'",
        "'abs'",
        "'('",
        "')'",
        "'['",
        "']'",
        "'+'",
        "'-'",
        "'*'",
        "'/'",
        "'>'",
        "'<'",
        "'='",
        "','",
        "'.'",
        "'^'",
        "'pi'",
        "<INVALID>",
        "'i'",
        "'min'",
        "'max'",
    ]

    symbolicNames = [
        "<INVALID>",
        "COS",
        "SIN",
        "TAN",
        "ACOS",
        "ASIN",
        "ATAN",
        "LN",
        "LOG",
        "SQRT",
        "EXP",
        "POWER",
        "ABS",
        "LPAREN",
        "RPAREN",
        "LBRACKET",
        "RBRACKET",
        "PLUS",
        "MINUS",
        "TIMES",
        "DIV",
        "GT",
        "LT",
        "EQ",
        "COMMA",
        "POINT",
        "POW",
        "PI",
        "EULER",
        "I",
        "MIN",
        "MAX",
        "VARIABLE",
        "SCIENTIFIC_NUMBER",
        "WS",
    ]

    RULE_equation = 0
    RULE_expression = 1
    RULE_multiplyingExpression = 2
    RULE_operatorAddSub = 3
    RULE_operatorMulDiv = 4
    RULE_powExpression = 5
    RULE_signedAtom = 6
    RULE_atom = 7
    RULE_scientific = 8
    RULE_matrixElement = 9
    RULE_constant = 10
    RULE_variable = 11
    RULE_func = 12
    RULE_funcname = 13
    RULE_relop = 14

    ruleNames = [
        "equation",
        "expression",
        "multiplyingExpression",
        "operatorAddSub",
        "operatorMulDiv",
        "powExpression",
        "signedAtom",
        "atom",
        "scientific",
        "matrixElement",
        "constant",
        "variable",
        "func",
        "funcname",
        "relop",
    ]

    EOF = Token.EOF
    COS = 1
    SIN = 2
    TAN = 3
    ACOS = 4
    ASIN = 5
    ATAN = 6
    LN = 7
    LOG = 8
    SQRT = 9
    EXP = 10
    POWER = 11
    ABS = 12
    LPAREN = 13
    RPAREN = 14
    LBRACKET = 15
    RBRACKET = 16
    PLUS = 17
    MINUS = 18
    TIMES = 19
    DIV = 20
    GT = 21
    LT = 22
    EQ = 23
    COMMA = 24
    POINT = 25
    POW = 26
    PI = 27
    EULER = 28
    I = 29
    MIN = 30
    MAX = 31
    VARIABLE = 32
    SCIENTIFIC_NUMBER = 33
    WS = 34

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class EquationContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext, i)

        def relop(self):
            return self.getTypedRuleContext(GdmlExpressionParser.RelopContext, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_equation

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEquation"):
                return visitor.visitEquation(self)
            else:
                return visitor.visitChildren(self)

    def equation(self):
        localctx = GdmlExpressionParser.EquationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_equation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.expression()
            self.state = 31
            self.relop()
            self.state = 32
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplyingExpression(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.MultiplyingExpressionContext)
            else:
                return self.getTypedRuleContext(
                    GdmlExpressionParser.MultiplyingExpressionContext, i
                )

        def operatorAddSub(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.OperatorAddSubContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.OperatorAddSubContext, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_expression

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)

    def expression(self):
        localctx = GdmlExpressionParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.multiplyingExpression()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 17 or _la == 18:
                self.state = 35
                self.operatorAddSub()
                self.state = 36
                self.multiplyingExpression()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplyingExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def powExpression(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.PowExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.PowExpressionContext, i)

        def operatorMulDiv(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.OperatorMulDivContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.OperatorMulDivContext, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_multiplyingExpression

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMultiplyingExpression"):
                return visitor.visitMultiplyingExpression(self)
            else:
                return visitor.visitChildren(self)

    def multiplyingExpression(self):
        localctx = GdmlExpressionParser.MultiplyingExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_multiplyingExpression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.powExpression()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 19 or _la == 20:
                self.state = 44
                self.operatorMulDiv()
                self.state = 45
                self.powExpression()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorAddSubContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(GdmlExpressionParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(GdmlExpressionParser.MINUS, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_operatorAddSub

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOperatorAddSub"):
                return visitor.visitOperatorAddSub(self)
            else:
                return visitor.visitChildren(self)

    def operatorAddSub(self):
        localctx = GdmlExpressionParser.OperatorAddSubContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_operatorAddSub)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not (_la == 17 or _la == 18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorMulDivContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIMES(self):
            return self.getToken(GdmlExpressionParser.TIMES, 0)

        def DIV(self):
            return self.getToken(GdmlExpressionParser.DIV, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_operatorMulDiv

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOperatorMulDiv"):
                return visitor.visitOperatorMulDiv(self)
            else:
                return visitor.visitChildren(self)

    def operatorMulDiv(self):
        localctx = GdmlExpressionParser.OperatorMulDivContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operatorMulDiv)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            _la = self._input.LA(1)
            if not (_la == 19 or _la == 20):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PowExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signedAtom(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.SignedAtomContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.SignedAtomContext, i)

        def POW(self, i: Optional[int] = None):
            if i is None:
                return self.getTokens(GdmlExpressionParser.POW)
            else:
                return self.getToken(GdmlExpressionParser.POW, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_powExpression

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPowExpression"):
                return visitor.visitPowExpression(self)
            else:
                return visitor.visitChildren(self)

    def powExpression(self):
        localctx = GdmlExpressionParser.PowExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_powExpression)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.signedAtom()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 26:
                self.state = 57
                self.match(GdmlExpressionParser.POW)
                self.state = 58
                self.signedAtom()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignedAtomContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(GdmlExpressionParser.PLUS, 0)

        def signedAtom(self):
            return self.getTypedRuleContext(GdmlExpressionParser.SignedAtomContext, 0)

        def MINUS(self):
            return self.getToken(GdmlExpressionParser.MINUS, 0)

        def func(self):
            return self.getTypedRuleContext(GdmlExpressionParser.FuncContext, 0)

        def atom(self):
            return self.getTypedRuleContext(GdmlExpressionParser.AtomContext, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_signedAtom

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSignedAtom"):
                return visitor.visitSignedAtom(self)
            else:
                return visitor.visitChildren(self)

    def signedAtom(self):
        localctx = GdmlExpressionParser.SignedAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_signedAtom)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(GdmlExpressionParser.PLUS)
                self.state = 65
                self.signedAtom()
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(GdmlExpressionParser.MINUS)
                self.state = 67
                self.signedAtom()
            elif token in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 30, 31]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.func()
            elif token in [13, 27, 28, 29, 32, 33]:
                self.enterOuterAlt(localctx, 4)
                self.state = 69
                self.atom()
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def scientific(self):
            return self.getTypedRuleContext(GdmlExpressionParser.ScientificContext, 0)

        def matrixElement(self):
            return self.getTypedRuleContext(GdmlExpressionParser.MatrixElementContext, 0)

        def variable(self):
            return self.getTypedRuleContext(GdmlExpressionParser.VariableContext, 0)

        def constant(self):
            return self.getTypedRuleContext(GdmlExpressionParser.ConstantContext, 0)

        def LPAREN(self):
            return self.getToken(GdmlExpressionParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext, 0)

        def RPAREN(self):
            return self.getToken(GdmlExpressionParser.RPAREN, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_atom

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAtom"):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)

    def atom(self):
        localctx = GdmlExpressionParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.scientific()

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.matrixElement()

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.variable()

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.constant()

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.match(GdmlExpressionParser.LPAREN)
                self.state = 77
                self.expression()
                self.state = 78
                self.match(GdmlExpressionParser.RPAREN)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScientificContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SCIENTIFIC_NUMBER(self):
            return self.getToken(GdmlExpressionParser.SCIENTIFIC_NUMBER, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_scientific

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitScientific"):
                return visitor.visitScientific(self)
            else:
                return visitor.visitChildren(self)

    def scientific(self):
        localctx = GdmlExpressionParser.ScientificContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_scientific)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(GdmlExpressionParser.SCIENTIFIC_NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MatrixElementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(GdmlExpressionParser.VariableContext, 0)

        def LBRACKET(self):
            return self.getToken(GdmlExpressionParser.LBRACKET, 0)

        def expression(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext, i)

        def RBRACKET(self):
            return self.getToken(GdmlExpressionParser.RBRACKET, 0)

        def COMMA(self, i: Optional[int] = None):
            if i is None:
                return self.getTokens(GdmlExpressionParser.COMMA)
            else:
                return self.getToken(GdmlExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_matrixElement

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMatrixElement"):
                return visitor.visitMatrixElement(self)
            else:
                return visitor.visitChildren(self)

    def matrixElement(self):
        localctx = GdmlExpressionParser.MatrixElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_matrixElement)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.variable()
            self.state = 85
            self.match(GdmlExpressionParser.LBRACKET)
            self.state = 86
            self.expression()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 24:
                self.state = 87
                self.match(GdmlExpressionParser.COMMA)
                self.state = 88
                self.expression()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(GdmlExpressionParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PI(self):
            return self.getToken(GdmlExpressionParser.PI, 0)

        def EULER(self):
            return self.getToken(GdmlExpressionParser.EULER, 0)

        def I(self):
            return self.getToken(GdmlExpressionParser.I, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_constant

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConstant"):
                return visitor.visitConstant(self)
            else:
                return visitor.visitChildren(self)

    def constant(self):
        localctx = GdmlExpressionParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constant)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 939524096) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariableContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(GdmlExpressionParser.VARIABLE, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_variable

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariable"):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)

    def variable(self):
        localctx = GdmlExpressionParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(GdmlExpressionParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcname(self):
            return self.getTypedRuleContext(GdmlExpressionParser.FuncnameContext, 0)

        def LPAREN(self):
            return self.getToken(GdmlExpressionParser.LPAREN, 0)

        def expression(self, i: Optional[int] = None):
            if i is None:
                return self.getTypedRuleContexts(GdmlExpressionParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(GdmlExpressionParser.ExpressionContext, i)

        def RPAREN(self):
            return self.getToken(GdmlExpressionParser.RPAREN, 0)

        def COMMA(self, i: Optional[int] = None):
            if i is None:
                return self.getTokens(GdmlExpressionParser.COMMA)
            else:
                return self.getToken(GdmlExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_func

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunc"):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)

    def func(self):
        localctx = GdmlExpressionParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_func)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.funcname()
            self.state = 101
            self.match(GdmlExpressionParser.LPAREN)
            self.state = 102
            self.expression()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 24:
                self.state = 103
                self.match(GdmlExpressionParser.COMMA)
                self.state = 104
                self.expression()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(GdmlExpressionParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncnameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COS(self):
            return self.getToken(GdmlExpressionParser.COS, 0)

        def TAN(self):
            return self.getToken(GdmlExpressionParser.TAN, 0)

        def SIN(self):
            return self.getToken(GdmlExpressionParser.SIN, 0)

        def ACOS(self):
            return self.getToken(GdmlExpressionParser.ACOS, 0)

        def ATAN(self):
            return self.getToken(GdmlExpressionParser.ATAN, 0)

        def ASIN(self):
            return self.getToken(GdmlExpressionParser.ASIN, 0)

        def LOG(self):
            return self.getToken(GdmlExpressionParser.LOG, 0)

        def LN(self):
            return self.getToken(GdmlExpressionParser.LN, 0)

        def EXP(self):
            return self.getToken(GdmlExpressionParser.EXP, 0)

        def SQRT(self):
            return self.getToken(GdmlExpressionParser.SQRT, 0)

        def POWER(self):
            return self.getToken(GdmlExpressionParser.POWER, 0)

        def ABS(self):
            return self.getToken(GdmlExpressionParser.ABS, 0)

        def MIN(self):
            return self.getToken(GdmlExpressionParser.MIN, 0)

        def MAX(self):
            return self.getToken(GdmlExpressionParser.MAX, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_funcname

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFuncname"):
                return visitor.visitFuncname(self)
            else:
                return visitor.visitChildren(self)

    def funcname(self):
        localctx = GdmlExpressionParser.FuncnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcname)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 3221233662) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelopContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(GdmlExpressionParser.EQ, 0)

        def GT(self):
            return self.getToken(GdmlExpressionParser.GT, 0)

        def LT(self):
            return self.getToken(GdmlExpressionParser.LT, 0)

        def getRuleIndex(self):
            return GdmlExpressionParser.RULE_relop

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRelop"):
                return visitor.visitRelop(self)
            else:
                return visitor.visitChildren(self)

    def relop(self):
        localctx = GdmlExpressionParser.RelopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_relop)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 14680064) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
